objects/ssot__AdverseEventContributingFactor__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdverseEventId__c</fullName>
        <label>Adverse Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContributingFactorCodeId__c</fullName>
        <label>Contributing Factor Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContributingFactorCodeObject__c</fullName>
        <label>Contributing Factor Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContributingFactorId__c</fullName>
        <label>Contributing Factor</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContributingFactorObject__c</fullName>
        <label>Contributing Factor Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Contributing Factor Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722924702_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventContributingFactor_Adver_rel</label>
        <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
        <relationshipLabel>AdverseEventContributingFactor_Adver_rel</relationshipLabel>
        <relationshipName>rel_1716722924702_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722928715_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventContributingFactor_Contr_rel</label>
        <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
        <relationshipLabel>AdverseEventContributingFactor_Contr_rel</relationshipLabel>
        <relationshipName>rel_1716722928715_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722930896_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventContributingFactor_Contr_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>AdverseEventContributingFactor_Contr_rel</relationshipLabel>
        <relationshipName>rel_1716722930896_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>